--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
               </div>
         </div>
-        <div class="col-sm" id="gifDiv">gifDiv</div>
+        <div class="col-sm" id="gifDiv"></div>
     </div>
 
     
